--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,15 @@
   border-radius: 4px;
 }
 
+.post-details{
+  border: 1px solid #ccc;
+  margin: 16px;
+  padding: 16px;
+  background-color: #fff;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+
 /* Style the post header */
 .post-header {
   display: flex;
