--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,20 @@
 .post {
   border: 1px solid #ccc;
-  margin: 16px;
-  padding: 16px;
+  margin: 15px;
+  padding-left: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #fff;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  width: 615px;
+}
+
+.posts-container {
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: center; 
+  align-items: center; 
 }
 
 .post-details{
@@ -17,8 +27,8 @@
 }
 
 .post-on-user-page{
-  width: 100%; /* Ensure the image takes the full width of its grid cell */
-  padding-bottom: 100%; /* Create a square aspect ratio (1:1) */
+  width: 100%;
+  padding-bottom: 100%; 
   position: relative;
   overflow: hidden;
 }
@@ -52,7 +62,7 @@
 
 /* Style the post image */
 .post-image img {
-  max-width: 100%;
+  width: 600px;
   height: auto;
 }
 
