--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,17 +27,22 @@
 }
 
 .post-on-user-page{
-  width: 100%;
+  border: 1px solid #ccc;
+  background-color: #fff;
   padding-bottom: 100%; 
   position: relative;
   overflow: hidden;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  display: flex;
 }
 
 .post-on-user-page-img {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover; /* Crop the image if it doesn't fit perfectly */
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  text-align: center;
 }
 
 /* Style the post header */
