--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,8 +32,8 @@
   padding-bottom: 100%; 
   position: relative;
   overflow: hidden;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
+  justify-content: center; 
+  align-items: center; 
   display: flex;
 }
 
@@ -45,7 +45,6 @@
   text-align: center;
 }
 
-/* Style the post header */
 .post-header {
   display: flex;
   align-items: center;
@@ -65,13 +64,11 @@
   color: #000;
 }
 
-/* Style the post image */
 .post-image img {
   width: 600px;
   height: auto;
 }
 
-/* Style the post actions (like, comment, share buttons) */
 .post-actions {
   display: flex;
   margin-top: 12px;
@@ -85,7 +82,6 @@
   font-weight: bold;
 }
 
-/* Style the post caption */
 .post-caption {
   margin-top: 8px;
 }
@@ -94,7 +90,6 @@
   font-size: 14px;
 }
 
-/* Style the post comments */
 .post-comments ul {
   list-style: none;
   padding: 0;
@@ -113,7 +108,6 @@
   color: #666
 }
 
-/* Style the post timestamp */
 .post-timestamp {
   margin-top: 8px;
   color: #888;
@@ -124,13 +118,11 @@ body, h1, p, ul, li {
   padding: 0;
 }
 
-/* Set a background color and font family */
 body {
   background-color: #fafafa;
   font-family: Arial, sans-serif;
 }
 
-/* Header styles */
 header {
   background-color: #fff;
   display: flex;
@@ -168,7 +160,6 @@ header {
   color: #666;
 }
 
-/* User posts section */
 .user-posts {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -195,7 +186,6 @@ header {
   display: flex
 }
 
-/* Footer styles */
 footer {
   background-color: #fff;
   padding: 16px;
@@ -204,14 +194,6 @@ footer {
   font-size: 14px;
   color: #666;
 }
-
-/* .title {
-  text-align: center;
-  margin: auto;
-  font-weight: bold;
-  text-decoration: none;
-  color: #000;
-} */
 
 .title {
   display: inline-block;
@@ -252,9 +234,9 @@ footer {
 
 .button {
   display: inline-block;
-  background-color: #405de6; /* Instagram's blue color */
-  color: #ffffff; /* Text color */
-  padding: 10px 20px; /* Adjust padding as needed */
+  background-color: #405de6;
+  color: #ffffff;
+  padding: 10px 20px;
   font-size: 16px;
   text-align: center;
   text-decoration: none;
@@ -265,7 +247,26 @@ footer {
 }
 
 .button:hover {
-  background-color: #3f4cd6; /* Slightly darker shade on hover */
+  background-color: #3f4cd6;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.delete-button {
+  background-color: #405de6;
+  color: #ffffff; 
+  padding: 10px 20px;
+  font-size: 16px;
+  text-decoration: none;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-left: auto;
+  margin-right: 15px
+}
+
+.delete-button:hover {
+  background-color: #3f4cd6;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -277,31 +278,20 @@ footer {
   color: #666
 }
 
-/* Base styles for the StickyMenu */
 .sticky-menu {
-  /* Your regular menu styles here */
-
-  /* Make it initially non-sticky */
   position: relative;
-  z-index: 1; /* Set a z-index value, it can be any positive integer */
-  width: 100%; /* Set the width to 100% to span the entire width */
-  margin: 0; /* Remove default margins */
-  padding: 0; /* Remove default padding */
+  z-index: 1;
+  width: 100%; 
+  margin: 0; 
+  padding: 0; 
 }
 
-/* Add a class to make it sticky */
 .sticky {
-  /* Stick it to the top */
   position: fixed;
   top: 0;
-
-  /* Increase the z-index value to bring it to the top of the stacking order */
-  z-index: 2; /* Use a higher value than the base z-index */
-  
-  /* Add a background color, box shadow, or any other styles you want */
+  z-index: 2; 
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  /* Additional styles as needed */
 }
 
 .edit-profile {
