--- a/client/src/index.css
+++ b/client/src/index.css
@@ -297,3 +297,21 @@ footer {
 .edit-profile {
   padding: 15px
 }
+
+.conversation-list {
+  padding: 20px;
+}
+
+.conversation-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.conversation-item img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
