--- a/client/src/index.css
+++ b/client/src/index.css
@@ -448,3 +448,27 @@ footer {
   color: #888;
   text-align: right;
 }
+
+.counts {
+  display: flex;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #555;
+}
+
+.count {
+  text-align: center;
+  padding: 25px;
+  margin: auto;
+}
+
+.count-number {
+  font-weight: bold;
+  display: block;
+  font-size: 18px;
+}
+
+.count-label {
+  font-size: 12px;
+  color: #777;
+}
