added styling to dm page to allow scrolling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -309,6 +309,10 @@ footer {
   cursor: pointer;
 }
 
+.conversation-item a:hover{
+  color: #405de6
+}
+
 .conversation-item img {
   width: 50px;
   height: 50px;
@@ -316,17 +320,42 @@ footer {
   margin-right: 10px;
 }
 
-.message {
+/* .message {
   border-radius: 10px;
   margin-bottom: 10px;
-}
+} */
 
-.message-container {
+/* .message-container {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+} */
+.dm-container {
+  max-width: 600px;
+  margin: 0 auto;
+  height: 600px;
+  border: 1px solid #ccc; 
+  overflow: hidden; 
+  overflow-y: scroll; 
+  position: relative; 
+}
+
+/* Style for the DM messages */
+.dm-messages {
+  position: absolute;
+  width: 100%;
+  padding: 10px; 
+  /* overflow-y: scroll;  */
+  box-sizing: border-box; 
+}
+
+.message {
+  margin-bottom: 10px;
+  padding: 5px;
+  background-color: #f0f0f0; 
+  border-radius: 5px; 
 }
 
 .message-input-container {
@@ -471,4 +500,11 @@ footer {
 .count-label {
   font-size: 12px;
   color: #777;
+}
+
+.heading {
+  font-size: 18px;
+  color: #777;
+  padding: 10px;
+
 }
