--- a/client/src/index.css
+++ b/client/src/index.css
@@ -320,18 +320,6 @@ footer {
   margin-right: 10px;
 }
 
-/* .message {
-  border-radius: 10px;
-  margin-bottom: 10px;
-} */
-
-/* .message-container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-} */
 .dm-container {
   max-width: 600px;
   margin: 0 auto;
@@ -391,28 +379,6 @@ footer {
   font-weight: bold;
 }
 
-/* .sent-message {
-  background-color: #3897f0;
-  color: #fff;
-  padding: 5px;
-  border-radius: 25px;
-  display: inline-block;
-  max-width: 70%; 
-  word-wrap: break-word;
-  text-align: right;
-}
-    
-.received-message {
-  background-color: #e5e5ea;
-  color: #000;
-  padding: 5px;
-  border-radius: 25px;
-  display: inline-block;
-  max-width: 70%; 
-  word-wrap: break-word;
-  text-align: left;
-} */
-
 .message-content {
   padding: 5px;
   border-radius: 25px;
@@ -420,46 +386,38 @@ footer {
   max-width: 70%; /* Adjust the maximum width as needed */
   word-wrap: break-word; /* Ensure long messages wrap to the next line */
 }
-/* 
-.sent-message {
-  background-color: #3897f0;
-  color: #fff;
-  text-align: right;
-} */
+
+.message-content-container{
+  position:relative;
+}
 
 .sent-message {
+  /* position:absolute; */
+  float:right;
+  text-align: right;
+  right: 0;
   background-color: #3897f0;
   color: #fff;
   padding: 5px;
   border-radius: 25px;
-  display: inline-block;
+  display:block;
+  /* display: inline-block; */
   max-width: 70%;
   word-wrap: break-word;
-  text-align: right; /* Ensure text alignment is set to right */
 }
 
 .received-message {
+  position:absolute;
+  left: 0;
   background-color: #e5e5ea;
   color: #000;
   text-align: left;
+  left: 0;
+  float: left
 }
-
-
-/* .dm-timestamp-received {
-  margin-top: 8px;
-  color: #888;
-  text-align: left;
-}
-
-.dm-timestamp-sent {
-  margin-top: 8px;
-  color: #888;
-  text-align: right;
-} */
 
 .dm-header-sent {
   justify-content: flex-end;
-
 } 
 
 .dm-header-received {
@@ -470,12 +428,18 @@ footer {
   margin-top: 8px;
   color: #888;
   text-align: left;
+  padding-top:5px;
+  display: inline-block;
+  padding-left: 5px
 }
 
 .dm-timestamp-sent {
   margin-top: 8px;
   color: #888;
   text-align: right;
+  padding-top:5px;
+  display: inline-block;
+  padding-right: 5px
 }
 
 .counts {
